# biomapper2

./: .gitignore  CLAUDE.md  README.md  TESTING.md  pyproject.toml
.github/workflows/: ci.yml  deploy-api.yml  mirror-sync.yml  test.yml
data/examples/: metabolites_synthetic.tsv  olink_protein_metadata.tsv
data/goldstandard/: metabolon_metadata_2025.tsv
data/groundtruth/: diseases_handcrafted.tsv  metabolon_metadata_2025.tsv
deploy/: README.md  biomapper2-api.service
docs/: COMPREHENSIVE_TESTING_STRATEGY.md
examples/: basic_dataset_kg_mapping.py  basic_kg_mapping.py  kestrel_performance_analysis_executed.ipynb  run_kestrel_evaluation.py  test_code.ipynb
notebooks/kg_o1_v3/: 01_one_hop_api_discovery.ipynb  02_predicate_relationship_mapping.ipynb  03_semantic_subgraph_extraction.ipynb  04_multi_hop_path_discovery.ipynb  05_semantic_qa_generation.ipynb  06_semantic_qa_evaluation.ipynb  07_semantic_vs_vocabulary_gap.ipynb  08_integration_recommendations.ipynb  KG_O1_TECHNICAL_STAKEHOLDER_REPORT.md  KG_O1_V3_EXPLORATION_REPORT.md  kg_o1_v3_utils.py
notebooks/kg_o1_v3/outputs/: integration_recommendations.json  multi_hop_paths.json  one_hop_api_audit.json  predicate_mapping.json  semantic_gap_analysis_v3.json  semantic_qa_dataset.json  semantic_qa_evaluation.json  semantic_subgraphs.json
scripts/: check.sh  fix.sh  run_milestone_datasets.py  test-all.sh  test-fast.sh  test-full.sh  test-performance.sh
scripts/hooks/: pre-push
src/biomapper2/: config.py  dataset_kg_mapper.py  kg_mapper.py  linker.py  mapper.py  utils.py  visualizer.py
src/biomapper2/api/: __init__.py  auth.py  constants.py  main.py
src/biomapper2/api/models/: __init__.py  requests.py  responses.py
src/biomapper2/api/routes/: __init__.py  discovery.py  mapping.py
src/biomapper2/core/: analysis.py  annotation_engine.py  annotator.py  linker.py  normalizer.py  resolver.py  semantic_query.py
src/biomapper2/core/annotators/: kestrel_text.py  kestrel_vector.py  metabolomics_workbench.py
src/biomapper2/core/normalizer/: normalizer.py  validators.py  vocab_config.py
tests/: conftest.py  test_api.py  test_api_unit.py  test_batching.py  test_dataset_analysis.py  test_dataset_kg_mapping.py  test_entity_kg_mapping.py  test_entity_model.py  test_equivalent_ids.py  test_example_scripts.py  test_kg_mapper.py  test_metabolomics_workbench.py  test_metabolomics_workbench_integration.py  test_normalizer.py  test_performance.py  test_semantic_query.py  test_validators_kraken.py  test_visualizer.py
