[project]
name = "biomapper2"
version = "0.1.0"
description = "Unified toolkit for multiomics data harmonization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/biomapper2"]
