[project]
name = "biomapper2"
version = "0.1.0"
description = "Unified toolkit for multiomics data harmonization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "bmt>=1.4.6",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rdkit>=2025.9.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "requests-cache>=1.2.1",
    "circuitbreaker>=2.1.3",
    "inflect>=7.5.0",
    "pydantic>=2.10.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "adjusttext>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/biomapper2"]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "httpx>=0.28.0",
    "ipykernel>=7.1.0",
    "pandas-stubs>=2.3.2.250926",
    "pyright>=1.1.407",
    "pytest>=8.4.2",
    "ruff>=0.14.6",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors (PEP 8 style issues)
    "F",   # pyflakes (undefined names, unused imports, etc.)
    "I",   # isort (import sorting)
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade (modernize Python syntax like old-style type hints)
]

[tool.ruff.lint.isort]
known-first-party = ["biomapper2"]

[tool.pytest.ini_options]
markers = [
    # Pyramid levels (Tier A = required/commit, Tier B = nightly, Tier C = opt-in)
    "unit: Tier A - Pure functions, no external dependencies",
    "component: Tier A - Single pipeline step, may mock dependencies",
    "integration: Tier B/C - Multiple steps or real API calls",
    "e2e: Tier C - Full end-to-end pipeline with live KG",
    # Cross-cutting markers
    "performance: Tier B - Timing and memory benchmarks",
    "kg_regression: Tier B/C - Knowledge graph version change detection",
    "slow: Tier B - Tests taking >10 seconds",
    "requires_api: Tier B/C - Requires live Kestrel API (our infrastructure)",
    "third_party: Tier C - Requires third-party APIs we don't own or control",
]
# Use scripts/test-{fast,full,performance,all}.sh instead of raw pytest -m flags.
# CI gating commands (for reference):
#   Fast (unit only):      pytest -m "not requires_api and not third_party and not performance"
#   Full (CI/check.sh):    pytest -m "not third_party and not performance"
#   Performance:           pytest -m performance -v -s
#   All:                   pytest -m performance -v -s && pytest -m "not performance"
